[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-sheet-tracker"
version = "0.1.0"
description = "Local tracker for DSA sheets with notes and progress."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["Flask>=2.2", "openpyxl>=3.1"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = ["E501"]
